--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "async-validator": "^3.3.0",
     "core-js": "^3.6.5",
+    "fish-ui": "^1.2.13",
+    "less": "^3.12.2",
+    "less-loader": "^6.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
