--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fish-ui": "^1.2.13",
     "less": "^3.12.2",
     "less-loader": "^6.2.0",
+    "uuid": "^8.3.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -43,7 +44,17 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "import/extensions": [
+        "error",
+        "ignorePackages",
+        {
+          "js": "never",
+          "ts": "never",
+          "vue": "never"
+        }
+      ]
+    }
   },
   "browserslist": [
     "> 1%",
